--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Web Content Starts Here -->
         <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="megoree.jpg" alt="drone view of me on Goree." /> 
+    <img src="images/megoree.jpg" alt="drone view of me on Goree." /> 
   </div>
         <header>
             <h1>Martel Mania</h1>
