--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
         <!-- Web Content Starts Here -->
         <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="images/megoree.jpg" alt="drone view of me on Goree." /> 
+    <img src="images/megoree.jpg" alt="Pizza with pepperoni and cheese." /> 
   </div>
         <header>
             <h1>Martel Mania</h1>
@@ -41,7 +41,7 @@
             <div>
                 <h3>Tell you about myself</h3>
                 </div>
-            <p>I am a citizen of the world! I know lots of people say that but I really mean it! I have yet to go anywhere that I struggled to fit in. During the last few days of my time in the US Army, I met with my career counselor and he asked me "What would you do with your time in a world where money didn't matter?"; my answer was I would build software that makes people's lives easier. This was in 2011!</p>
+            <p>I am a citizen of the world! I know lots of people say that but I really mean it! I have yet to go anywhere that I struggled to fit in and I am equally proficient working as a part of a team or as a lone wolf. During the last few days of my time in the US Army, I met with my career counselor and he asked me "What would you do with your time in a world where money didn't matter?"; my answer was I would build software that makes people's lives easier. This was in 2011!</p>
             <p>Outside of web development, I enjoy traveling with my wife and my favorite soccer team AC Milan!</p>
             <hr>
             <div>
@@ -55,7 +55,8 @@
             </ol>
         </main>
         <footer>
-            <p>Image Source: <a href="type URL" target="_blank">Unsplash</a></p>
+            <h4>Martel Works, 2022</h4>
+
         </footer>
         <script src ="script.js"></script>
     </body>
