--- a/index.html
+++ b/index.html
@@ -1,63 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-    <title>Martel World</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    </head>
-
-    <body>
-        <!-- Web Content Starts Here -->
-        <div class="pageContainer">
-  <div class="imageContainer"> 
-    <img src="images/megoree.jpg" alt="Pizza with pepperoni and cheese." /> 
-  </div>
-        <header>
-            <h1>Martel Mania</h1>
-        </header>
-        <main>
-            <h2>Introduction</h2>
-            <div>
-            <h3>Who I am</h3>
-            </div>
-            <p>My name is Adam Martel Brown and I am an aspiring Software Engineer</p>
-            <hr>
-            <div>
-            <h3>Where am I?</h3>
-            </div>
-            <p>I am currently in Bethesda, Maryland but I have lived all over the world though! I was born in Florida and I have lived in the following states:
-                <ul> <li>Georgia 
-                    <li>South Carolina 
-                    <li>North Carolina
-                    <li>Virginia 
-                    <li>Maryland 
-                    <li>Wisconsin
-                    <li>California</li> 
-                    </ul>
-                    I have also lived in Senegal (West Africa), Iraq (deployment) and South Korea (duty station)!</p>
-           <hr>
-            <div>
-                <h3>Tell you about myself</h3>
-                </div>
-            <p>I am a citizen of the world! I know lots of people say that but I really mean it! I have yet to go anywhere that I struggled to fit in and I am equally proficient working as a part of a team or as a lone wolf. During the last few days of my time in the US Army, I met with my career counselor and he asked me "What would you do with your time in a world where money didn't matter?"; my answer was I would build software that makes people's lives easier. This was in 2011!</p>
-            <p>Outside of web development, I enjoy traveling with my wife and my favorite soccer team AC Milan!</p>
-            <hr>
-            <div>
-            <h3>Reach me @</h3>
-        </div>
-            <p>These are two (2) of the few ways to contact me </p>
-            
-            <ol>
-            <li><a href="https://www.linkedin.com/in/martelb/" target="_blank"> LinkedIn</a></li>
-            <li><a href="https://github.com/martelscript" target="_blank"> GitHub</a></li>
-            </ol>
-        </main>
-        <footer>
-            <h4>Martel Works, 2022</h4>
-
-        </footer>
-        <script src ="script.js"></script>
-    </body>
-    </html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<title>Martel World</title>
+		<link href="style.css" rel="stylesheet" type="text/css">
+	</head>
+	<body>
+		
+		<!-- Web Content Starts Here -->
+		<div class="pageContainer">
+			<div class="imageContainer">
+				<img src="images/megoree.jpg" alt="Pizza with pepperoni and cheese.">
+			</div>
+			<header>
+				<h1>Martel Mania</h1>
+			</header>
+			<main>
+				<h2>Introduction</h2>
+				<div>
+					<h3>Who I am</h3>
+				</div>
+				<p>My name is Adam Martel Brown and I am an aspiring Software Engineer</p>
+				<hr>
+				<div>
+					<h3>Where am I?</h3>
+				</div>
+				<p>I am currently in Bethesda, Maryland but I have lived all over the world though! I was born in Florida and I have lived in the following states:
+				</p>
+				<ul>
+					<li>Georgia
+					</li>
+					<li>South Carolina
+					</li>
+					<li>North Carolina
+					</li>
+					<li>Virginia
+					</li>
+					<li>Maryland
+					</li>
+					<li>Wisconsin
+					</li>
+					<li>California</li>
+				</ul>
+				I have also lived in Senegal (West Africa), Iraq (deployment) and South Korea (duty station)!<p></p>
+				<hr>
+				<div>
+					<h3>Tell you about myself</h3>
+				</div>
+				<p>I am a citizen of the world! I know lots of people say that but I really mean it! I have yet to go anywhere that I struggled to fit in and I am equally proficient working as a part of a team or as a lone wolf. During the last few days of my time in the US Army, I met with my career counselor and he asked me "What would you do with your time in a world where money didn't matter?"; my answer was I would build software that makes people's lives easier. This was in 2011!</p>
+				<p>Outside of web development, I enjoy traveling with my wife and my favorite soccer team AC Milan!</p>
+				<hr>
+				<div>
+					<h3>Reach me @</h3>
+				</div>
+				<p>These are two (2) of the few ways to contact me
+				</p>
+				<ol>
+					<li>
+						<a href="https://www.linkedin.com/in/martelb/" target="_blank">
+							LinkedIn</a>
+					</li>
+					<li>
+						<a href="https://github.com/martelscript" target="_blank">
+							GitHub</a>
+					</li>
+				</ol>
+			</main>
+			<footer>
+				<h4>Martel Works, 2022</h4>
+			</footer>
+			<script src="script.js"></script>
+		</div>
+	</body>
+</html>
