--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Web Content Starts Here -->
 		<div class="pageContainer">
 			<div class="imageContainer">
-				<img src="images/megoree.jpg" alt="Pizza with pepperoni and cheese.">
+				<img src="images/megoree.jpg" alt="goree island drone shot of myself.">
 			</div>
 			<header>
 				<h1>Martel Mania</h1>
