--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</li>
 					<li>California</li>
 				</ul>
-				I have also lived in Senegal (West Africa), Iraq (deployment) and South Korea (duty station)!<p></p>
+				<p>I have also lived in Senegal (West Africa), Iraq (deployment) and South Korea (duty station)!</p>
 				<hr>
 				<div>
 					<h3>Tell you about myself</h3>
