--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div>
 					<h3>Who I am</h3>
 				</div>
-				<p>My name is Adam Martel Brown and I am an aspiring Software Engineer</p>
+				<p>My name is Adam Martel Brown and I am an aspiring Software Engineer.</p>
 				<hr>
 				<div>
 					<h3>Where am I?</h3>
