--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<body>
 		
 		<!-- Web Content Starts Here -->
-		<div class="pageContainer">
-			<div class="imageContainer">
+		<div class="pageContainer"> </div>
+			<div class="imageContainer"> </div>
 				<img src="images/megoree.jpg" alt="goree island drone shot of myself.">
 			</div>
 			<header>
