--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	<body>
 		
 		<!-- Web Content Starts Here -->
-		<div class="pageContainer"> </div>
-			<div class="imageContainer"> </div>
-				<img src="images/megoree.jpg" alt="goree island drone shot of myself.">
+		<div class="pageContainer"> 
+			<div class="imageContainer">
+				<img src="images/megoree.jpg" alt="me on goree island drone shot.">
 			</div>
+            </div>
 			<header>
 				<h1>Martel Mania</h1>
 			</header>
@@ -43,7 +44,7 @@
 					</li>
 					<li>California</li>
 				</ul>
-				<p>I have also lived in Senegal (West Africa), Iraq (deployment) and South Korea (duty station)!</p>
+				<p>I have also lived in Senegal (West Africa), Iraq (deployment) and South Korea (duty station)!<p></p>
 				<hr>
 				<div>
 					<h3>Tell you about myself</h3>
